{
    "name": "TouchControl",
    "maps": [
        {
            "name": "Touch",
            "id": "dcaad198-03a4-4da3-b0fb-9c477cf6e8d7",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "6ba3d394-e0c7-4c4c-b203-eb74b39ede72",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "354bbd43-a8b5-49a3-8901-7dc3a7cd0e7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "e6a651bb-aa7e-41f5-8b26-e873593a658c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3a904a5-9eaf-4189-a353-c3b5a2d7efe0",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21ba4e31-0a34-4ac9-bf85-e0a4ffb6bb25",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9eb9ec4a-872d-4526-8f69-576daf8633b9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}